--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="btn-box">
         <button type="button" id="back1">Back</button>
-        <button type="button" id="next1">Next</button>
+        <button type="button" id="next2">Next</button>
       </div>
     </form>
 
@@ -44,11 +44,10 @@
     </form>
 
     <div class="step-row">
-      <div id="progress">
-        <div class="step-col"><small>Step1</small></div>
-        <div class="step-col"><small>Step2</small></div>
-        <div class="step-col"><small>Step3</small></div>
-      </div>
+      <div id="progress"></div>
+      <div class="step-col"><small>Step1</small></div>
+      <div class="step-col"><small>Step2</small></div>
+      <div class="step-col"><small>Step3</small></div>
     </div>
   </div>
   <body>
