--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
   <div class="contanier">
     <form id="form1">
       <h3>Create Account</h3>
-      <input type="text" placeholder="Email" required />
-      <input type="password" placeholder="Password" required />
-      <input type="password" placeholder="Confirm Password" required />
+      <input id="email" type="text" placeholder="Email" required />
+      <input id="passw" type="password" placeholder="Password" required />
+      <input
+        id="passwConfirm"
+        type="password"
+        placeholder="Confirm Password"
+        required
+      />
 
       <div class="btn-box">
         <button type="button" id="next1">Next</button>
