--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <form id="form1">
       <h3>Create Account</h3>
       <input id="email" type="text" placeholder="Email" required />
-      <input id="passw" type="password" placeholder="Password" required />
+      <input id="password1" type="password" placeholder="Password" required />
       <input
-        id="passwConfirm"
+        id="password2"
         type="password"
         placeholder="Confirm Password"
         required
