--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <form id="form3">
       <h3>Personal Info</h3>
-      <input type="text" placeholder="First Name" required />
-      <input type="text" placeholder="Last Name" required />
+      <input id="Fname" type="text" placeholder="First Name" required />
+      <input id="Lname" type="text" placeholder="Last Name" required />
       <input type="text" placeholder="Phone Number" required />
 
       <div class="btn-box">
